# lakeventory

./: .dockerignore  .env-example  .gitignore  CONTRIBUTORS.md  Dockerfile  Dockerfile.distroless  Dockerfile.static  LICENSE  Makefile  README.md  docker-compose.yml  inventory_databricks_assets.py  lakeventory.spec  pyproject.toml  requirements.txt  setup.py  test_env_setup.sh  workspaces.yaml.example
.github/workflows/: docker-publish.yml  python-publish.yml
.lakeventory/: config.yaml.example
databricks_inventory/: __init__.py  __main__.py  cache.py  client.py  collectors.py  config.py  inventory_cli.py  lockin.py  logging_config.py  models.py  output.py  permissions_validator.py  utils.py
docs/: AUTHENTICATION.md  BACKUP.md  CLI.md  DOCKER.md  FEATURES.md  IMPLEMENTATION_CACHE.md  MULTI_WORKSPACE.md  PERMISSIONS.md  RELEASE.md  TROUBLESHOOTING.md  USAGE.md
lakeventory/: __init__.py  __main__.py  cache.py  cli.py  client.py  collectors.py  config.py  health_check.py  inventory_cli.py  models.py  multi_workspace.py  multi_workspace_cli.py  output.py  permissions_validator.py  setup_wizard.py  utils.py  workspace_backup.py  workspace_config.py
scripts/: build_executable.sh  install.sh  run_scheduled.sh  test-permissions.sh  test-setup.sh
tests/: test_cache.py  test_client.py  test_collectors.py  test_delta_output.py  test_health_check.py  test_inventory_cli.py  test_lockin.py  test_logging_config.py  test_models.py  test_multi_workspace.py  test_output.py  test_permissions_validator.py  test_setup_wizard.py  test_utils.py  test_workspace_backup.py  test_workspace_config.py
